--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -15,7 +15,6 @@
 @import 'partial/footer';
 @import 'partial/nav-top';
 
-@import 'partial/loop-recientes';
 @import 'partial/loop-destacados';
 @import 'partial/loop-principal';
 
@@ -23,3 +22,6 @@
 @import 'partial/search';
 @import 'partial/paginador';
 @import 'partial/sidebar';
+@import 'partial/about-us';
+@import 'partial/error';
+@import 'partial/queries';
