--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -1,22 +1,39 @@
 .footer {
-	@include gridle(12);
+	@include gridle(12,desktopess);
+	@include gridle(12,phoness);
 	@extend .text-center;
-	background:{color:$third_color;}
+	@extend .no-paddings;
 	font:{family:$primary_font;}
 	color:#fff;
-	.container-footer {
-		@include gridle(8);
-		@include gridle_push(2);
-		@extend .text-center;
-		display: block;
-		margin: 0 auto;
-		position: relative;
-		.first-box {
-			@include gridle(12);
-			padding: 10px 0;
-			background:{color:$third_color;}
+	position: relative;	
+	height: $height-footer;
+	margin: {top:-$height-footer;}
+	.footer-content {
+		@include gridle(12);
+		@extend .no-paddings;
+		@extend .no-margins;
+		background:{color:$third_color;}
+		.container-footer {
+			@include gridle(8,desktopess);
+			@include gridle(12,phoness);
+			@include gridle_push(2,desktopess);
+			@extend .text-center;
+			@extend .no-paddings;
+			@extend .no-margins;
+			display: block;
+			margin: 0 auto;
+			position: relative;
+			@include gridle_state(phoness){
+				margin: 0;
+				padding: 0;
+				left: 0;
+			}
+			.first-box {
+				@include gridle(12);
+				padding: 10px 0;
 				.logo {
-					@include gridle(2);
+					@include gridle(2,desktopess);
+					@include gridle(12,phoness);
 					@include gridle_clear(both); 
 					float: center;
 					margin: 0 auto;
@@ -32,6 +49,11 @@
 						text:{decoration:none}
 						list-style: none;
 						display: inline-block;
+						@include gridle_state(phoness){
+							margin:0;
+							padding: 0;
+							width: 100%;
+						}
 						li {
 							display: inline-block;
 							a {
@@ -40,66 +62,151 @@
 								margin-left: 42px;
 								text:{transform:uppercase;} 
 								font:{weight:bold;} 
+								@include gridle_state(phoness){
+									margin:{left:5px;}
+									text:{size:10px;}
+								}
 							}	
+						}	
+					}
+				}
+			}
+			.second-box {
+				@extend .no-paddings;
+				@include gridle(8,desktopess);
+				@include gridle(12,phoness);
+				.newsletter {
+					@include gridle(12);
+					padding-bottom: 20px;
+					@include gridle_state(phoness){
+						padding:{bottom:0;}
+					}
+					input {
+						@include gridle(10,desktopess);
+						@include gridle(8,phoness);
+						border:1px solid $third_color_2;
+						outline:none !important; 
+						background: none;
+						padding:10px 5px;
+					}
+					.send {
+						@include gridle(2,desktopess);
+						@include gridle(4,phoness);
+						border:1px solid $third_color_2;
+						padding:10px 5px;
+						color:$third_color_2;
+						font:{weight:bold;} 
+						text:{transform:uppercase;align:center;}
+					}
+				}
+			}
+			.third-box {
+				@extend .no-paddings;
+				@include gridle(4);
+				@include gridle_state(phoness){
+					display: none;
+				}
+				.siguenos {
+					text:{decoration:none}
+					list-style: none;
+					ul {
+						@extend .no-paddings;
+						@extend .no-margins;
+						@include gridle(12,desktopess);
+						@include gridle(12,phoness);
+						height: auto;
+						li {
+							@extend .no-paddings;
+							@extend .text-center;
+							@include gridle(4,desktopess);
+							@include gridle(4,phoness);
+							display:block;
+							a {
+								@extend .text-center;
+								background: {color:$second_color}
+								border-radius: 50%;
+								display: table;
+								height: 40px;
+								width: 40px;
+								display:table;
+								margin: 0 auto;
+								i {
+									@include gridle(12);
+									color:$third_color;
+									display: table-cell;
+									font:{size:20px;}
+									float: none;
+									text:{align:center;}
+									vertical-align: middle;
+								}
+							}
 						}
 					}
 				}
 			}
-		.second-box {
-			@extend .no-paddings;
-			@include gridle(8);
-			.newsletter {
+			.four-box {
 				@include gridle(12);
-				padding-bottom: 20px;
-				input {
-					@include gridle(10);
-					border:1px solid $third_color_2;
-					background: none;
-					padding:10px 5px;
-				}
-				.send {
-					@include gridle(2);
-					border:1px solid $third_color_2;
-					padding:10px 5px;
-					color:$third_color_2;
-					font:{weight:bold;} 
-					text:{transform:uppercase;align:center;}
-				}
-			}
-		}
-		.third-box {
-			@extend .no-paddings;
-			@include gridle(4);
-			.siguenos {
-				text:{decoration:none}
-				list-style: none;
-				li {
-					@extend .text-center;
-					@include gridle(4);
-					display: table;
-					padding-left: 20%;
-					i {
-						@include gridle(12);
-						background: {color:$second_color}
-						border-radius: 20px;
-						color:$third_color;
-						display: table-cell;
-						font:{size:20px;}
-						float: none;
-						height: 40px;
-						text:{align:center;}
-						vertical-align: middle;
-						width: 40px;
-						
+				padding: 10px 0;
+				ul {
+					@include gridle_state(phoness){
+						margin:0;
+						padding: 0;
+						width: 100%;
+					}
+					li {
+						display: inline-block;
+						@include gridle_state(phoness){
+							width: 100%;
+							text:{align:center;}
+						}
+						&:first-child {
+							padding: {right:20px;}
+							border-right: 1px solid #000;
+							@include gridle_state(phoness){
+								border-right: 0;
+								padding: 0;
+								margin:0;
+							}
+						}
+						a {
+							color: #000;
+							font:{size:11px;} 
+							margin-left: 20px;
+							text:{transform:uppercase;} 
+							font:{weight:bold;} 
+						}
 					}
 				}
 			}
+			h4 {
+				@extend .no-paddings;
+				color:$third_color_2;
+				text:{transform:uppercase;} 
+				margin: 20px 0 5px 0;
+				@include gridle_state(phoness){
+					margin:{top:0;}
+				}
+			}
 		}
-		h4 {
-			@extend .no-paddings;
-			color:$third_color_2;
-			text:{transform:uppercase;} 
-			margin: 20px 0 5px 0;
+	}
+	.cont-feedinstaram {
+		@include gridle(12);
+		background:rgba(0,0,0,0.7);
+		height:250px;
+		margin:0 auto;
+		h2 {
+			margin:{top:15px;}
+			span {
+				font:{weight:light;}
+			}
 		}
+		#instafeed {
+			@include gridle(12);
+			padding: 20px 0;
+			img {
+				margin: 0 30px 0 0;
+				border: {radius:5px;}
+			}
+		}	
 	}
 }
