--- a/prod/sass/partial/_nav-top.scss
+++ b/prod/sass/partial/_nav-top.scss
@@ -1,23 +1,36 @@
 .nav-top {
 	max-width: 100%;
 	@extend .no-paddings;
-	@include gridle(12);
-	@include gridle_clear(both);
 	background:{color:$third_color} ;
 	height: 35px;
 	.top-social {
-		@include gridle(2);
-		@include gridle_push(2);
+		@include gridle(2,desktopess);
+		@include gridle_push(2,desktopess);
 		@include gridle_clear(left);
 		color:$third_color_2;
+		@include gridle(4,phoness);
+		@include gridle_state(phoness){
+			left:0;
+			padding:0;
+		}
 		li {
 			width: 35px;
 			text:{decoration:none;align:center;}
 			list-style: none;
 			display: inline-block;
+				@include gridle_state(phoness){
+					width:20px;
+				}	
+			a {
+				color:$third_color_2;
+			} 
 			i { 	
 				padding: 7px 0 0 0; 
 				font:{size:20px;}
+				@include gridle_state(phoness){
+					padding: 10px 0 0 0;
+					font:{size:18px;}
+				}	
 			}
 				:hover {
 				color:$third_color_1;
@@ -25,10 +38,18 @@
 		}
 	}
 	.search {
-			@include gridle(4);
-			@include gridle_push(4);
+			@include gridle(4,desktopess);
+			@include gridle_push(4,desktopess);
+			@include gridle(8,phoness);
+			@include gridle_state(phoness){
+				left:0;
+				padding:0;
+			}
 		.cont_search {
 			@include gridle(11);
+			@include gridle_state(phoness){
+				padding:0;
+			}
 			input {
 				background: none;
 				width: 100%;
@@ -51,7 +72,10 @@
 			font:{size:20px;}
 			padding: 5px 0 0 0;
 			cursor:pointer;
+			@include gridle_state(phoness){
+					padding: 5px 0 0 0;
+					font:{size:18px;}
+			}
 		}
-
 	}
 }
