--- a/prod/sass/partial/_paginador.scss
+++ b/prod/sass/partial/_paginador.scss
@@ -1,3 +1,23 @@
+.pagination {
+	float:right;
+	margin:{bottom:30px !important;}
+	height: auto;
+	.page-numbers {
+		background:{color:$first_color}
+		padding: 10px 15px;
+		color: #fff;
+		@include gridle_state(phoness){
+			padding: 10px 10px;
+		}
+	}
+	.text {
+		display: inline-block;
+		@include gridle_state(phoness){
+			display: none;
+		}
+	}
+}
+
 /*.pages {
 	position:absolute;
 	bottom: 0;
