--- a/prod/sass/partial/_vars.scss
+++ b/prod/sass/partial/_vars.scss
@@ -14,3 +14,5 @@ $second_color_1:#a0186d;
 $third_color:#e1e1e0; 		/* GRIS */
 $third_color_1:#d0d0cf; 	/* GRIS tono 1 */
 $third_color_2:#a2a2a2; 	/* GRIS tono 2 */
+
+$height-footer:400px;	//Altura Footer
