--- a/prod/sass/partial/_wrap.scss
+++ b/prod/sass/partial/_wrap.scss
@@ -1,20 +1,40 @@
+*{
+	margin:0;
+}
+html{
+	height: 100%;
+	body{
+		height: 100%;
+		@extend .no-paddings;
+		@extend .no-margins;
+	}
+}
 .wrapper {
 	max-width: 1280px;
-	@extend .center;
-	@include gridle(12);
-	@include gridle_clear(both);
 	@include gridle_parent();
 	display: block;
-	float:none;
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin:0 auto $height-footer;
+	@include gridle(12,phoness); 
+	.push {
+		@include gridle_clear(both);
+		height: $height-footer;
+	}
 	.swipe{
 		overflow: hidden;
 		visibility: hidden;
 		position: relative;
 		width:100%;
 		height: 450px;
+		@include gridle_state(phoness){
+			height:250px;
+		}
 		.swipe-wrap{
 			overflow: hidden;
 			position: relative;
+			@include gridle(12,phoness); 
 			.content-slide{
 				background:{position:center;size:cover;};
 				height: 450px;
@@ -22,6 +42,10 @@
 				float:left;
 				width:100%;
 				position: relative;
+				@include gridle_state(phoness){
+					height:250px;
+					min-height:0;
+				}
 				article {
 					position: absolute;
 					width:40%;
@@ -32,6 +56,13 @@
 					padding:20px;
 					@extend .text-left;
 					background:{color:rgba(0,0,0,.5);}
+					@include gridle_state(phoness){
+						height:50px;
+						width:80%;
+						bottom:10px;
+						left:10px;
+						padding:10px;
+					}
 					main{
 						h1{
 							font:{family:$primary_font;weight:bold;}
@@ -39,6 +70,9 @@
 							text:{transform:uppercase;}
 							@extend .no-margins;
 							@extend .no-paddings;
+							@include gridle_state(phoness){
+								font:{size:20px;}
+							}
 						}
 					}
 				}
@@ -53,6 +87,9 @@
 			color:#fff;
 			font: {size:40px;}
 			cursor: pointer;
+			@include gridle_state(phoness){
+				font: {size:20px;}
+			}
 			&:hover{
 				color:$first_color;
 			}
@@ -60,6 +97,9 @@
 		.btn_next{
 			@extend .btn_prev;
 			left:97%;
+			@include gridle_state(phoness){
+				left: 94%;
+			}
 		}
 	}
 }
