--- a/prod/sass/partial/_loop-destacados.scss
+++ b/prod/sass/partial/_loop-destacados.scss
@@ -4,7 +4,7 @@
 	@extend .no-paddings;
 	margin-top: 40px;
 	.content-destacados {
-		@include gridle(6,desktopess);
+		@include gridle(6,desktopess notebook-min);
 		@include gridle(12,phoness);
 		height: 200px;
 		margin:10px 0;
