--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	@include gridle(12,desktopess);
+	@include gridle(12,desktopess notebook-min);
 	@include gridle(12,phoness);
 	@extend .text-center;
 	@extend .no-paddings;
@@ -15,7 +15,7 @@
 		background:{color:$third_color;}
 		.container-footer {
 			@include gridle(8,desktopess);
-			@include gridle(12,phoness);
+			@include gridle(12,phoness notebook-min);
 			@include gridle_push(2,desktopess);
 			@extend .text-center;
 			@extend .no-paddings;
@@ -32,7 +32,7 @@
 				@include gridle(12);
 				padding: 10px 0;
 				.logo {
-					@include gridle(2,desktopess);
+					@include gridle(2,desktopess notebook-min);
 					@include gridle(12,phoness);
 					@include gridle_clear(both); 
 					float: center;
@@ -73,37 +73,58 @@
 			}
 			.second-box {
 				@extend .no-paddings;
-				@include gridle(8,desktopess);
-				@include gridle(12,phoness);
+				@include gridle(8,desktopess notebook-min);
+				@include gridle(12,phoness );
+				@include gridle_state(notebook-min){
+					float:none;
+				}
 				.newsletter {
 					@include gridle(12);
 					padding-bottom: 20px;
 					@include gridle_state(phoness){
 						padding:{bottom:0;}
 					}
+					@include gridle_state(tabless tabless-min){
+						padding:{left:10px;right: 10px;}
+					}
+					@include gridle_state(notebook-min){
+						padding:{left:0;right:0;}
+					}
 					input {
-						@include gridle(10,desktopess);
+						@include gridle(10,desktopess notebook-min);
 						@include gridle(8,phoness);
 						border:1px solid $third_color_2;
 						outline:none !important; 
 						background: none;
 						padding:10px 5px;
+						@include gridle_state(notebook-min){
+							padding:9px 5px;
+						}
+						@include gridle_state(tabless tabless-min){
+							padding:15px 5px;
+						}
 					}
 					.send {
-						@include gridle(2,desktopess);
+						@include gridle(2,desktopess notebook-min);
 						@include gridle(4,phoness);
 						border:1px solid $third_color_2;
 						padding:10px 5px;
 						color:$third_color_2;
 						font:{weight:bold;} 
 						text:{transform:uppercase;align:center;}
+						@include gridle_state(notebook-min){
+							padding:9px 5px;
+						}
+						@include gridle_state(tabless tabless-min){
+							padding:15px 5px;
+						}
 					}
 				}
 			}
 			.third-box {
 				@extend .no-paddings;
 				@include gridle(4);
-				@include gridle_state(phoness){
+				@include gridle_state(phoness notebook-min){
 					display: none;
 				}
 				.siguenos {
@@ -112,13 +133,13 @@
 					ul {
 						@extend .no-paddings;
 						@extend .no-margins;
-						@include gridle(12,desktopess);
+						@include gridle(12,desktopess notebook-min);
 						@include gridle(12,phoness);
 						height: auto;
 						li {
 							@extend .no-paddings;
 							@extend .text-center;
-							@include gridle(4,desktopess);
+							@include gridle(4,desktopess notebook-min);
 							@include gridle(4,phoness);
 							display:block;
 							a {
@@ -148,6 +169,8 @@
 				@include gridle(12);
 				padding: 10px 0;
 				ul {
+					@extend .no-margins;
+					@extend .no-paddings;
 					@include gridle_state(phoness){
 						margin:0;
 						padding: 0;
