--- a/prod/sass/partial/_search.scss
+++ b/prod/sass/partial/_search.scss
@@ -6,19 +6,25 @@
 	-moz-box-shadow: 3px 4px 18px -3px  rgba(189,185,189,0.8);
 	box-shadow: 3px 4px 18px -3px  rgba(189,185,189,0.8);
 	.img-post {
-		@include gridle(3,desktopess);
-		@include gridle(12,phonees);
+		@include gridle(3,desktopess notebook-min tabless tabless-min);
+		@include gridle(12,phoness phoness-min);
 		@extend .no-margins;
 		@extend .no-paddings;
 		background-size:cover;
 		background-repeat: no-repeat; 
 		height: 200px;
+		@include gridle_state(phoness phoness-min){
+			border:{top:5px solid $second_color;}
+		}
 	}
 	.content-post {
-		@include gridle(7,desktopess);
-		@include gridle(12,phonees);
+		@include gridle(7,desktopess notebook-min tabless tabless-min);
+		@include gridle(12,phoness phoness-min);
 		@extend .no-margins;
 		clear:none;
+		@include gridle_state(tabless tabless-min){
+			padding:{left:10px;right:10px;}
+		}
 		h2 {
 			margin: 10px 0 0 0;
 			a {
@@ -29,10 +35,10 @@
 			@include gridle(12);
 			@extend .no-paddings;
 			.img-author{
-				@include gridle(1,desktopess);
+				@include gridle(1,desktopess notebook-min tabless tabless-min);
 				@extend .text-right;
 				@extend .no-paddings;
-				@include gridle_state(phoness){
+				@include gridle_state(phoness phoness-min){
 					width: 17%;
 				}
 				img {
@@ -50,7 +56,7 @@
 				@include gridle(4);
 				display: table;
 				height: 60px;
-				@include gridle_state(phoness){
+				@include gridle_state(phoness phoness-min){
 					width: 83%;
 				}
 				a {	
@@ -59,7 +65,7 @@
 					vertical-align: middle;
 					color:$third_color_2;
 					font:{style:italic;}
-					@include gridle_state(phoness){
+					@include gridle_state(phoness phoness-min){
 						font:{size:14px;}
 						margin: 0;
 						width: 80%;
@@ -72,12 +78,12 @@
 		}
 	}
 	.date-post {
-		@include gridle(2,desktopess);
-		@include gridle(12,phoness);
+		@include gridle(2,desktopess notebook-min tabless tabless-min);
 		@extend .no-margins;
 		background: $second_color;
 		height: 200px;
-		@include gridle_state(phonees){
+		@include gridle(12,phoness phoness-min);
+		@include gridle_state(phoness phoness-min){
 			height: 50px;
 		}
 		.dia {
@@ -87,7 +93,7 @@
 			width: 100%;
 			font:{size:40px;}
 			padding: 20% 0 0 0;
-			@include gridle_state(phonees){
+			@include gridle_state(phoness phoness-min){
 				font:{size:16px;}
 				padding:0;
 				width: 10%;
@@ -99,7 +105,7 @@
 			@extend .dia;
 			font:{size:20px;weight:lighter; }
 			text:{transform: uppercase;}
-			@include gridle_state(phonees){
+			@include gridle_state(phoness phoness-min){
 				font:{size:14px;}
 				padding:0;
 				width: 10%;
@@ -118,7 +124,14 @@
 		    -o-transform: rotate(45deg);
 		    -ms-transform: rotate(45deg);
 		    transform: rotate(45deg);
-		    @include gridle_state(phoness){
+		    @include gridle_state(desktopess notebook){
+		    	top: 45%;
+  				left: -20px;
+		    }
+		     @include gridle_state(tabless-min){
+				left: -10px;
+			}
+			@include gridle_state(phoness phoness-min){
 		    	top: -14%;
 				left: 43%;
 		    }
