--- a/prod/sass/partial/_single.scss
+++ b/prod/sass/partial/_single.scss
@@ -9,7 +9,7 @@
 		}
 		.container-one {
 			@extend .no-paddings;
-			@include gridle(12,desktopess);
+			@include gridle(12,desktopess notebook-min);
 			@include gridle(12, phoness);
 			.content-title {
 				h1 {
@@ -26,14 +26,15 @@
 					}
 				}
 				.tags{
+					@include gridle(11,desktopess notebook-min tabless);
+					@include gridle_state(tabless tabless-min){
+						float:none;
+					}
 					@extend .no-margins;
 					@extend .no-paddings;
 					display: block;
 					color:#fff;
 					list-style: none;
-					@include gridle_state(phoness){
-						  width: 80%;
-					}
 					li{
 						padding:2px 5px;
 						margin: 2px 2px 0 0;
@@ -96,7 +97,7 @@
 		}
 		.container-two {
 			@extend .no-paddings;
-			@include gridle(8,desktopess);
+			@include gridle(8,desktopess notebook-min);
 			@include gridle(12,phoness);
 			.content-text {
 				@include gridle(12);
