--- a/prod/sass/partial/_loop-destacados.scss
+++ b/prod/sass/partial/_loop-destacados.scss
@@ -28,12 +28,14 @@
 				color:#fff;
 				font:{family:$primary_font;size:20px;}
 				text:{transform: uppercase;}
-				@include gridle_state(phoness){
-					font:{size:17px;}
-				}
 				@include gridle_state(tabless tabless-min){
 					font:{size:17px;} 
 					padding:{left:5px;}
+				}
+				@include gridle_state(phoness){
+					font:{size:17px;}
+					margin:0;
+					padding:0;
 				}
 			}
 			p {
