--- a/prod/sass/partial/_single.scss
+++ b/prod/sass/partial/_single.scss
@@ -26,7 +26,8 @@
 					}
 				}
 				.tags{
-					@include gridle(11,desktopess notebook-min tabless);
+					@include gridle(11,desktopess);
+					@include gridle(10,notebook-min);
 					@include gridle_state(tabless tabless-min){
 						float:none;
 					}
