--- a/prod/sass/partial/_wrap.scss
+++ b/prod/sass/partial/_wrap.scss
@@ -22,6 +22,9 @@ html{
 	@include gridle_state(tabless-min){
 		padding:{left:10px;right:10px;}
 	}
+	@include gridle_state(phoness){
+		padding:0;
+	}
 	.push {
 		height: $height-footer;
 	}
