armado maqueta responsive

--- a/prod/sass/partial/_about-us.scss
+++ b/prod/sass/partial/_about-us.scss
@@ -1,5 +1,5 @@
 .us-about {
 	@extend .text-left;
 	@include gridle(8,desktopess notebook-min);
-	@include gridle(12,phoness);
+	@include gridle(12,phoness-min);
 }
