--- a/prod/sass/partial/_nav-top.scss
+++ b/prod/sass/partial/_nav-top.scss
@@ -5,13 +5,19 @@
 	height: 35px;
 	position: relative;
 	z-index: 99;
+	@include gridle_state(tabless-min){
+		height: 45px;
+	}
+	@include gridle_state(phoness-min){
+		height: 35px;
+	}
 	.top-social {
 		@include gridle(2,desktopess notebook-min);
 		@include gridle_push(2,desktopess);
 		@include gridle_clear(left);
 		color:$third_color_2;
-		@include gridle(3,phoness);
-		@include gridle_state(phoness){
+		@include gridle(3,phoness-min);
+		@include gridle_state(phoness-min){
 			left:0;
 			padding:0;
 		}
@@ -20,19 +26,38 @@
 			text:{decoration:none;align:center;}
 			list-style: none;
 			display: inline-block;
-				@include gridle_state(phoness){
+				@include gridle_state(abless-min){
+					height: 45px;
+					width: 45px;
+				}
+				@include gridle_state(phoness-min){
+					height: 35px;
 					width:20px;
-				}	
+				}
 			a {
 				color:$third_color_2;
+				display: table;
+				@include gridle_state(tabless-min){
+					height: 45px;
+					width: 45px;
+				}
+				@include gridle_state(phoness-min){
+					height: 35px;
+					width: 35px;
+				}
 			} 
 			i { 	
 				padding: 7px 0 0 0; 
 				font:{size:20px;}
-				@include gridle_state(phoness){
+				display: table-cell;
+				vertical-align: middle;
+				@include gridle_state(tabless-min){
+					font:{size:24px;}
+				}
+				@include gridle_state(phoness-min){
 					padding: 10px 0 0 0;
 					font:{size:18px;}
-				}	
+				}
 			}
 				:hover {
 				color:$third_color_1;
@@ -43,8 +68,8 @@
 		@include gridle_state(desktopess notebook-min tabless-min){
 			display: none;
 		}
-		@include gridle(6,phoness phoness-min);
-		@include gridle_state(phoness phoness-min){
+		@include gridle(6,phoness-min);
+		@include gridle_state(phoness-min){
 			display: block;
 			height: 35px;
 		}
@@ -52,21 +77,27 @@
 			width: 68%;
 			margin:0 auto;
 			display: block;
+			@include gridle_state(tabless-min){
+				width: 40%; 
+			}
+			@include gridle_state(phoness-min){
+				width: 74%; 
+			}
 		}
 	}
 	.search {
 			@include gridle(4,desktopess);
 			@include gridle(6,notebook-min);
 			@include gridle_push(4,desktopess notebook-min);
-			@include gridle(1,phoness);
-			@include gridle_state(phoness){
+			@include gridle(1,phoness-min);
+			@include gridle_state(phoness-min){
 				left:0;
 				padding:0;
 			}
 		.cont_search {
-			@include gridle(1,phoness phoness-min);
-			@include gridle(11, desktopess notebook-min tabless-min);
-			@include gridle_state(phoness phoness-min){
+			@include gridle(1,phoness-min);
+			@include gridle(11,desktopess notebook-min tabless-min);
+			@include gridle_state(phoness-min){
 				padding:0;
 			}
 			input {
@@ -75,15 +106,21 @@
 				border:0;
 				border-bottom:1px solid $third_color_2;
 				color:$third_color_2;
-				padding: 8px 0 0 0;
+				padding:0 0 0;
+				margin:{bottom:5px;}
 				outline:none;
 				font:{size:18px;}
 				text:{transform:uppercase;}
+				height: 30px;
 				@include placeholder {
 					color:$third_color_2;	
 				}
-				@include gridle_state(phoness phoness-min){
+				@include gridle_state(phoness-min){
 					display: none;
+				}
+				@include gridle_state(tabless-min){
+					height: 40px;
+					margin:{bottom:5px;}
 				}
 			}
 		}
@@ -94,8 +131,20 @@
 			font:{size:20px;}
 			padding: 5px 0 0 0;
 			cursor:pointer;
-			@include gridle_state(phoness){
+			height: 35px;
+			display: table;
+			@include gridle_state(phoness-min){
 				display: none;
+			}
+			@include gridle_state(tabless-min){
+					height: 45px;
+			}
+			i {
+				display: table-cell;
+				vertical-align: middle;
+				@include gridle_state(tabless-min){
+					font:{size:24px;}
+				}
 			}
 		}
 	}
@@ -104,7 +153,7 @@
 	@include gridle_state(desktopess notebook-min tabless-min){
 		display: none;
 	}
-	@include gridle_show(phoness);
+	@include gridle_show(phoness-min);
 	@include gridle(12);
 	@include gridle_parent();
 	display: block;
@@ -168,5 +217,11 @@
 		height:auto;
 		margin: 0 auto;
 		cursor: pointer;
+		@include gridle_state(tabless-min){
+			width: 110px;
+		}
+		@include gridle_state(phoness-min){
+			width: 90px;
+		}
 	}
 }
