--- a/prod/sass/partial/_sidebar.scss
+++ b/prod/sass/partial/_sidebar.scss
@@ -1,7 +1,7 @@
 .container-sidebar {
 	@extend .no-paddings;
 	@include gridle(4,desktopess);
-	@include gridle(12,phoness);
+	@include gridle(12,phoness-min);
 	margin:20px 0;
 	height: auto;
 	.sidebar {
