--- a/prod/sass/partial/_single.scss
+++ b/prod/sass/partial/_single.scss
@@ -3,24 +3,24 @@
 	@include gridle_clear(both);
 	.single-post {
 		@include gridle(12,desktopess);
-		@include gridle(12,phoness);
-		@include gridle_state(phoness){
+		@include gridle(12,phoness-min);
+		@include gridle_state(phoness-min){
 			padding: 0;
 		}
 		.container-one {
 			@extend .no-paddings;
 			@include gridle(12,desktopess notebook-min);
-			@include gridle(12, phoness);
+			@include gridle(12,phoness-min);
 			.content-title {
 				h1 {
 					margin:20px 0 0 0;
-					@include gridle_state(phoness){
+					@include gridle_state(phoness-min){
 						  	margin: 28px 0 3px 0;
 							line-height: 24px;
 							}
 					a {
 					color:#000;
-						@include gridle_state( phoness){
+						@include gridle_state(phoness-min){
 							font:{size:25px;}
 						}
 					}
@@ -28,7 +28,7 @@
 				.tags{
 					@include gridle(11,desktopess);
 					@include gridle(10,notebook-min);
-					@include gridle_state(tabless tabless-min){
+					@include gridle_state(tabless-min){
 						float:none;
 					}
 					@extend .no-margins;
@@ -55,7 +55,7 @@
 				background-size: cover;
 				margin-top: 2%;
 				position: relative;
-				@include gridle_state(phoness){
+				@include gridle_state(phoness-min){
 						height:200px;
 						}
 				.date {
@@ -70,7 +70,7 @@
 					padding: 5px;
 					width: 65px;
 					float: right;
-					@include gridle_state(phoness){
+					@include gridle_state(phoness-min){
 						height: 40px;
 						width: 40px;
 						top:-25px;
@@ -80,7 +80,7 @@
 						display: block;
 						font-size: 30px;
 						margin: 5px 0;
-						@include gridle_state(phoness) {
+						@include gridle_state(phoness-min) {
 							font:{size:20px;}
 							margin:{top:2px; bottom:4px;}
 						}
@@ -89,7 +89,7 @@
 						@extend.text-center;
 						text:{transform: uppercase;}
 						display: block;
-						@include gridle_state(phoness){
+						@include gridle_state(phoness-min){
 							font:{size:12px;}
 						}
 					}	
@@ -99,7 +99,7 @@
 		.container-two {
 			@extend .no-paddings;
 			@include gridle(8,desktopess notebook-min);
-			@include gridle(12,phoness);
+			@include gridle(12,phoness-min);
 			.content-text {
 				@include gridle(12);
 				@extend .no-paddings;
@@ -142,7 +142,7 @@
 							a {	
 							color:$third_color_2;
 							font:{style:italic;}
-							@include gridle_state(phoness){
+							@include gridle_state(phoness-min){
 								font:{size:14px;}
 								}
 							}
