--- a/prod/sass/partial/_loop-destacados.scss
+++ b/prod/sass/partial/_loop-destacados.scss
@@ -64,6 +64,7 @@
 				}
 			}
 			.tags{
+				@include gridle(9, desktopess notebook-min);
 				@extend .no-margins;
 				@extend .no-paddings;
 				color:#fff;
